--- a/TestPipeline.ipynb
+++ b/TestPipeline.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "res = run_experiment(hx=0.1, hz=2.0, J=-1,\n",
     "                     num_layers=1,\n",
-    "                     mode=\"qasm_ideal\",   # \"statevector\" | \"qasm_ideal\" | \"qasm_fake\"\n",
+    "                     mode=\"qasm_fake\",   # \"statevector\" | \"qasm_ideal\" | \"qasm_fake\"\n",
     "                     subspace=True,\n",
     "                     shots=8192,\n",
     "                     N_subspace=1)\n",
@@ -183,6 +183,33 @@
     "    plot_2d=True,\n",
     "    plot_3d=False\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c171026e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.wrapper import run_experiment\n",
+    "from qiskit_ibm_runtime.fake_provider import FakeQuitoV2\n",
+    "\n",
+    "res = run_experiment(hx=0.1, hz=2.0, J=-1,\n",
+    "                     num_layers=1,\n",
+    "                     mode=\"qasm_fake\",\n",
+    "                     subspace=\"fine\", \n",
+    "                     shots=2048,\n",
+    "                     N_subspace=1,\n",
+    "                     backend=FakeQuitoV2())\n",
+    "\n",
+    "print(\"Mode:\", res.mode.name, \"Subspace:\", res.subspace_mode)\n",
+    "print(\"VQE   E =\", res.vqe_energy)\n",
+    "print(\"QSE   E =\", res.subspace_energy)\n",
+    "print(\"Verbesserung ggü. VQE [%] =\", res.improvement_vs_vqe_pct)\n",
+    "print(\"Rel. Fehler VQE   =\", res.rel_error_vqe*100, \"%\")\n",
+    "print(\"Rel. Fehler QSE   =\", res.rel_error_subspace*100, \"%\")\n",
+    "print(\"Meta:\", res.meta)\n"
    ]
   }
  ],
