--- a/TestPipeline.ipynb
+++ b/TestPipeline.ipynb
@@ -187,16 +187,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c171026e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter: ParameterView([Parameter(α_0), Parameter(β_0), Parameter(γ_0)])\n",
+      "Anzahl: 3\n",
+      "Mode: QASM_FAKE Subspace: SubspaceMode.FINE\n",
+      "VQE   E = -9.907714843749998\n",
+      "QSE   E = -13.494778786345789\n",
+      "Verbesserung ggü. VQE [%] = 36.204755578513534\n",
+      "Rel. Fehler VQE   = 29.267232351167692 %\n",
+      "Rel. Fehler QSE   = 3.6586067099900683 %\n",
+      "Meta: {'shots': 2048, 'N_subspace': 1, 'rank': 15, 'num_qubits': 5}\n"
+     ]
+    }
+   ],
    "source": [
-    "from src.wrapper import run_experiment\n",
+    "from vqe_and_qse.wrapper import run_experiment\n",
     "from qiskit_ibm_runtime.fake_provider import FakeQuitoV2\n",
+    "import numpy as np\n",
+    "from vqe_and_qse.hamiltonians import build_sparse_hamiltonian\n",
+    "from vqe_and_qse.ansatz import build_hva_ansatz\n",
     "\n",
-    "res = run_experiment(hx=0.1, hz=2.0, J=-1,\n",
-    "                     num_layers=1,\n",
+    "backend = FakeQuitoV2()\n",
+    "Hamiltonian = build_sparse_hamiltonian(hx=0.1, hz=2.0, backend=backend, J=-1)\n",
+    "\n",
+    "Initial_Params = np.random.default_rng(42).uniform(-1, 1, 3)\n",
+    "\n",
+    "# Bau param. Ansatz\n",
+    "ansatz, params = build_hva_ansatz(backend=backend, num_layers=1)\n",
+    "\n",
+    "print(\"Parameter:\", ansatz.parameters)\n",
+    "print(\"Anzahl:\", ansatz.num_parameters)\n",
+    "\n",
+    "res = run_experiment(Hamiltonian,\n",
+    "                     ansatz,\n",
+    "                     Initial_Params,\n",
     "                     mode=\"qasm_fake\",\n",
     "                     subspace=\"fine\", \n",
     "                     shots=2048,\n",
